--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "react-dom": "^19.2.0",
     "react": "^19.2.0",
-    "html-to-image": "1.11.11"
+    "html-to-image": "1.11.11",
+    "firebase": "10.12.2"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
